--- a/index.html
+++ b/index.html
@@ -1376,6 +1376,7 @@
                 <a class="footer-link" href="gallery.html"><i class="fa fa-angle-right mr-2"></i>Gallery</a>
                 <a class="footer-link" href="blog.html"><i class="fa fa-angle-right mr-2"></i>Blog</a>
                 <a class="footer-link" href="contact.html"><i class="fa fa-angle-right mr-2"></i>Contact</a>
+                <a class="footer-link" href="privacy-policy.html"><i class="fa fa-angle-right mr-2"></i>Privacy Policy</a>
               </div>
             </div>
 
